--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "deploy-wiki": "./scripts/losh deploy-wiki",
     "deploy": "npm run build && npm run deploy-gitbook && npm run deploy-wiki",
     "version": "./scripts/losh version",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,9 @@
     "user": "usuario",
     "ip": "10.6.128.168",
     "ruta": "/home/usuario/src/sytw/gitbook-start-iaas-ull"
+  },
+  "engines": {
+    "node": "0.10.x"
   },
   "homepage": " ",
   "Heroku": {
@@ -52,6 +56,7 @@
     "gulp-run": "^1.7.1",
     "gulp-shell": "^0.5.2",
     "gulp-watch": "^4.3.10",
-    "simple-git": "^1.54.0"
+    "simple-git": "^1.54.0",
+    "express": "4.13.4"
   }
 }
