--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   },
   "dependencies": {
     "async": "^1.4.0",
+    "express": "^4.13.4",
     "fs-extra": "^0.22.1",
     "gh-pages": "^0.3.1",
     "gitbook": "^2.1.0",
@@ -56,7 +57,7 @@
     "gulp-run": "^1.7.1",
     "gulp-shell": "^0.5.2",
     "gulp-watch": "^4.3.10",
-    "simple-git": "^1.54.0",
-    "express": "4.13.4"
+    "heroku-cli": "^6.0.2",
+    "simple-git": "^1.54.0"
   }
 }
