--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "MyBook",
   "version": "0.0.1",
   "description": "GitBook Boilerplate",
-  "main": "app.js",
+  "main": "gitbook-start-heroku.js",
   "scripts": {
     "generate-gitbook": "./scripts/losh generate-gitbook",
     "generate-wiki": "./scripts/losh generate-wiki",
@@ -43,20 +43,21 @@
   "Directorio": {
     "nombre_dir": "milibro"
   },
-  "dependencies": {
+  "devDependencies":{
     "async": "^1.4.0",
-    "express": "^4.13.4",
     "fs-extra": "^0.22.1",
     "gh-pages": "^0.3.1",
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
+     "gulp": "^3.9.1",
+     "gulp-shell": "^0.5.2",
+  },
+  "dependencies": {
+    "express": "^4.13.4",
     "gitbook-start-heroku-merquililycony": "^2.2.24",
-    "gulp": "^3.9.1",
     "gulp-git": "^1.11.3",
-    "gitbook-cli": "^0.3.4",
     "gulp-install": "^0.6.0",
     "gulp-run": "^1.7.1",
-    "gulp-shell": "^0.5.2",
     "gulp-watch": "^4.3.10",
     "heroku-cli": "^6.0.2",
     "simple-git": "^1.54.0"
