--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "gitbook": "^2.1.0",
     "gitbook-cli": "^0.3.4",
      "gulp": "^3.9.1",
-     "gulp-shell": "^0.5.2",
+     "gulp-shell": "^0.5.2"
   },
   "dependencies": {
     "express": "^4.13.4",
