--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "MyBook",
   "version": "0.0.1",
   "description": "GitBook Boilerplate",
-  "main": "index.js",
+  "main": "gitbook-start-heroku.js",
   "scripts": {
     "generate-gitbook": "./scripts/losh generate-gitbook",
     "generate-wiki": "./scripts/losh generate-wiki",
